tests/baselines/reference/enumWithPrimitiveName.errors.txt
==== tests/cases/compiler/enumWithPrimitiveName.ts (3 errors) ====
    enum string { }
         ~~~~~~
!!! error TS2431: Enum name cannot be 'string'
    enum number { }
         ~~~~~~
!!! error TS2431: Enum name cannot be 'number'
    enum any { }
         ~~~
!!! error TS2431: Enum name cannot be 'any'